# pysta

./: .gitignore  Makefile  README.md  long_call_generator.py  long_call_generator_if.py  sapp.db  todo.md
programs/functionality_tests/: annassign.01.py  annassign.02.py  booleans.py  class.01.py  class.03.py  class.05.py  class.06.py  dict.01.py  dict.03.py  dict.04.py  find_test.py  fun_target1.py  function_sp.py  if_undef.py  int.py  joined_str.01.py  joined_str.02.py  joined_str.03.py  list.py  list_assign.02.py  list_assign.04.py  nested.py  sanitize.test.01.py  sanitize.test.02.py  sqs_minimal.py  string.py  string1.py  string_eq.py  subscript_attrib.01.py  subscript_attrib.02.py  subscript_seq.py  tamara.py  test.if.04.py  test.while.01.py  test.while.02.py  test_spai2.py  test_spai2_safe.py  test_spai3.py  typing_issue.01.py  views_.py  (+4 more)
programs/interesting_cases/: bad_location.py  class.01.py  class.02.py  if_chain.py  if_false.py  if_nest.py  list.01.safe.py  list.01.unsafe.py  multiple_sources.py  recursion_if.py  recursion_limit.py  spai.py  spai0.py  (+7 more)
src/tainter/: aux.ml  class.ml  counter.ml  domain.ml  domain.mli  dune  flag.ml  function.ml  id.ml  id.mli  ir_transfer.ml  ir_transfer.mli  json.ml  language.ml  language.mli  language_aux.ml  location.ml  location.mli  main.ml  main_py.ml  mode.ml  parser_taint.mly  prog.ml  pysasig_lexer.mll  pysasig_parser.mly  semantics.backip  semantics.ml  semantics.mli  signature.ml  smt.ml  smt.ml.backup  smt.mli  string_helper.ml  svm.ml  svm.mli  symbolic_path.ml  symbolic_path.mli  taint.ml  test.ml  utils.ml
(+55 files in other folders)
